🔧 Fix Netlify deployment - Move Tailwind dependencies to production
✅ Moved @tailwindcss/postcss and tailwindcss to dependencies
✅ Removed NODE_ENV=production from Netlify config
✅ Updated build command to use npm ci
✅ Fixed PostCSS configuration issues

This resolves the 'Cannot find module @tailwindcss/postcss' error during Netlify builds.

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
   publish = "out"
-  command = "npm run build"
+  command = "npm ci && npm run build"
 
 [build.environment]
   NODE_VERSION = "18"
@@ -11,14 +11,7 @@
   to = "/index.html"
   status = 200
 
-[context.production.environment]
-  NODE_ENV = "production"
-
-[context.deploy-preview.environment]
-  NODE_ENV = "production"
-
-[context.branch-deploy.environment]
-  NODE_ENV = "production"
+# Environment contexts removed to allow devDependencies during build
 
 # Headers for security and performance
 [[headers]]
