--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@radix-ui/react-tooltip": "^1.2.7",
     "@reactuses/core": "^6.0.5",
     "@sentry/nextjs": "^10.3.0",
+    "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.54.0",
     "@tailwindcss/postcss": "^4",
     "@tanstack/react-query": "^5.82.0",
