--- a/netlify.toml
+++ b/netlify.toml
@@ -1,25 +1,8 @@
 [build]
-  command = "npm ci && npm run build"
+command = "npm run build"
 
-[build.environment]
-  NODE_VERSION = "20"
-  NPM_VERSION = "10"
-
-# Use Next.js plugin for proper API route support
 [[plugins]]
-  package = "@netlify/plugin-nextjs"
-
-# API routes redirect for static export fallback
-[[redirects]]
-  from = "/api/*"
-  to = "/api-not-available.html"
-  status = 200
-
-# Fallback for client-side routing
-[[redirects]]
-  from = "/*"
-  to = "/index.html"
-  status = 200
+package = "@netlify/plugin-nextjs"
 
 # Headers for security and performance
 [[headers]]
