--- a/package.json
+++ b/package.json
@@ -2,12 +2,16 @@
   "name": "nextjs_tailwind_shadcn_ts",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "20.x"
+  },
   "scripts": {
     "dev": "nodemon --exec \"npx tsx server.ts\" --watch server.ts --watch src --ext ts,tsx,js,jsx 2>&1 | tee dev.log",
     "build": "next build",
     "build:netlify": "next build",
     "start": "NODE_ENV=production tsx server.ts 2>&1 | tee server.log",
     "lint": "next lint",
+    "typecheck": "tsc --noEmit",
     "db:push": "prisma db push",
     "db:generate": "prisma generate",
     "db:migrate": "prisma migrate dev",
@@ -15,11 +19,12 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
-    "test:e2e": "cypress run",
-    "test:e2e:open": "cypress open",
+    "test:e2e": "playwright test",
+    "test:e2e:open": "playwright test --ui",
     "test:playwright": "playwright test",
     "test:playwright:ui": "playwright test --ui",
-    "test:all": "npm run test && npm run test:e2e && npm run test:playwright"
+    "test:all": "npm run test && npm run test:e2e && npm run test:playwright",
+    "prepare": "husky"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
@@ -114,6 +119,7 @@
     "cypress": "^14.5.4",
     "eslint": "^9.33.0",
     "eslint-config-next": "15.3.5",
+    "husky": "^8.0.3",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^30.0.5",
     "jest-environment-jsdom": "^30.0.5",
