--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,6 +39,11 @@ jobs:
       env:
         SITE_URL: http://localhost:3000
     
+    - name: Run analytics tests
+      run: npx playwright test tests/analytics.spec.ts
+      env:
+        SITE_URL: http://localhost:3000
+    
     - name: Upload test results
       if: always()
       uses: actions/upload-artifact@v4
