--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "node": "20.x"
   },
   "scripts": {
+    "predev": "kill-port 3000 || true",
     "dev": "nodemon --exec \"npx tsx server.ts\" --watch server.ts --watch src --ext ts,tsx,js,jsx 2>&1 | tee dev.log",
     "prebuild": "tsx scripts/prebuild.ts",
     "build": "next build",
@@ -125,6 +126,7 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^30.0.5",
     "jest-environment-jsdom": "^30.0.5",
+    "kill-port": "^2.0.1",
     "nodemon": "^3.1.10",
     "puppeteer": "^24.16.0",
     "tw-animate-css": "^1.3.5",
